Fix search bar on mobile

--- a/src/styl/header.styl
+++ b/src/styl/header.styl
@@ -1,6 +1,7 @@
 header.header
 	display flex
 	flex-wrap no-wrap
+	justify-content flex-end
 	align-items center
 	width 100%
 	min-height 72px
@@ -15,7 +16,9 @@ header.header
 		display flex
 		flex-wrap no-wrap
 		justify-content flex-end
+		max-width 100vw
 		overflow hidden
+		transition opacity 0.1s ease-swift, max-width 0.2s ease-swift
 		a
 			display inline-block
 			position relative
@@ -70,3 +73,11 @@ header.header
 			color color-fg
 			background-color color-bg
 			cursor unset
+
+	@media (max-width: 60em)
+		&.header-searching nav ul
+			max-width 0
+			opacity 0
+		#header-search input:focus
+			margin 0
+			width 90vw
